update product + refactor